--- a/spec/fixtures/package-with-native-deps/package.json
+++ b/spec/fixtures/package-with-native-deps/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "./index.js",
   "engines": {
-    "atom": "*"
+    "soldat": "*"
   },
   "dependencies": {
     "native-dep": "./node_modules/native-dep"
