Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@getsoldat/recrue",
+  "name": "recrue",
   "description": "Soldat app's recrue - Package manager",
   "version": "0.0.2",
   "license": "MIT",
