--- a/package.json
+++ b/package.json
@@ -25,15 +25,14 @@
     "asar-require": "0.3.0",
     "async": "~0.2.8",
     "colors": "~0.6.1",
-    "first-mate": "6.2.0",
     "fs-plus": "2.x",
     "git-utils": "^4.0",
-    "hosted-git-info": "^2.1.4",
+    "hosted-git-info": "~2.1.5",
     "keytar": "^4.0",
     "mv": "2.0.0",
     "ncp": "~0.5.1",
     "npm": "4.2.0",
-    "node-gyp": "3.6.2",
+    "node-gyp": "~3.5.0",
     "open": "0.0.4",
     "plist": "git+https://github.com/nathansobo/node-plist.git",
     "q": "~0.9.7",
@@ -41,9 +40,9 @@
     "request": "^2.72.0",
     "rimraf": "^2.5.2",
     "season": ">=5.0.5 <6.0",
-    "semver": "^5.1.0",
+    "semver": "^5.3.0",
     "tar": "^2.2.1",
-    "temp": "~0.7.0",
+    "temp": "git+https://github.com/DavidLemarier/node-temp.git",
     "underscore-plus": "1.x",
     "wordwrap": "0.0.2",
     "wrench": "~1.5.1",
